[gd_scene load_steps=16 format=2]

[ext_resource path="res://Font/roboto_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Settings/backbutton settings.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Settings/settings.gd" type="Script" id=3]
[ext_resource path="res://Icons/arrow_back_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" type="Texture" id=4]
[ext_resource path="res://Font/roboto_bold_20.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Settings/Inianimation.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.105882, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.886275, 0.878431, 0.984314, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=8]
resource_name = "animation_close_scene"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1000, 125 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "animation_to_scene"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, 125 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 96.0

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 96.0
custom_colors/icon_color_pressed = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_disabled = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_focus = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_hover_pressed = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_normal = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_hover = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 960.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 928.0
margin_bottom = 404.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 816.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Show betas"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 820.0
margin_right = 896.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 896.0
margin_bottom = 84.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 816.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Close launcher when starting game"

[node name="CheckButton2" type="CheckButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 896.0
margin_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animation_close_scene = SubResource( 8 )
anims/animation_to_scene = SubResource( 9 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button3" to="MarginContainer/VBoxContainer/HBoxContainer/Button3" method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckButton2" to="." method="_on_CheckButton2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="MarginContainer/VBoxContainer/HBoxContainer/Button3" method="_on_AnimationPlayer_animation_finished"]
